--- a/index.html
+++ b/index.html
@@ -11,5 +11,21 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header-bg">
+      <div class="header">
+        <a href="./">
+          <img src="./img/ribeirotecnologia.svg" alt="Ribeiro Tecnologia" />
+        </a>
+
+        <nav aria-label="primaria">
+          <ul class="header-menu">
+            <li><a href="./sobre.html">Sobre</a></li>
+            <li><a href="./servicos.html">Serviços</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
