atualizacoes no css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       content="Assistência técnica em São José do Rio Preto especializada em reparos de qualidade em celulares, tablets, notebooks e computadores."
     />
     <link rel="stylesheet" href="./css/style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Saira:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header-bg">
@@ -27,5 +34,21 @@
         </nav>
       </div>
     </header>
+
+    <main class="introducao-bg">
+      <div class="introducao">
+        <div class="introducao-conteudo">
+          <h1 class="texto-grande">Assistência técnica especializada.</h1>
+          <p class="texto-medio">
+            Reparos de alta qualidade em celulares, tablets, notebooks e
+            desktops.
+          </p>
+          <a class="botao" href="./contato.html">Pedir Orçamento</a>
+        </div>
+        <div>
+          <img src="./img/intro1.jpg" alt="Celular desmontado." />
+        </div>
+      </div>
+    </main>
   </body>
 </html>
