Menu e Introduçao alterados e seçao sobre criada

--- a/index.html
+++ b/index.html
@@ -19,36 +19,76 @@
     />
   </head>
   <body>
-    <header class="header-bg">
-      <div class="header">
-        <a href="./">
-          <img src="./img/ribeirotecnologia.svg" alt="Ribeiro Tecnologia" />
-        </a>
+    <div class="background">
+      <header class="header-bg">
+        <div class="header">
+          <a href="./">
+            <img src="./img/ribeirotecnologia.svg" alt="Ribeiro Tecnologia" />
+          </a>
 
-        <nav aria-label="primaria">
-          <ul class="header-menu">
-            <li><a href="./sobre.html">Sobre</a></li>
-            <li><a href="./servicos.html">Serviços</a></li>
-            <li><a href="./contato.html">Contato</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+          <nav aria-label="primaria">
+            <ul class="header-menu font-1-s cor-11">
+              <li><a href="./sobre.html">Sobre</a></li>
+              <li><a href="./servicos.html">Serviços</a></li>
+              <li><a href="./contato.html">Contato</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
 
-    <main class="introducao-bg">
-      <div class="introducao">
-        <div class="introducao-conteudo">
-          <h1 class="texto-grande">Assistência técnica especializada.</h1>
-          <p class="texto-medio">
-            Reparos de alta qualidade em celulares, tablets, notebooks e
+      <main class="introducao-bg cor-0">
+        <div class="introducao container">
+          <div class="introducao-conteudo">
+            <h1 class="font-1-xxl">Assistência técnica especializada.</h1>
+            <p class="font-2-l cor-5">
+              Reparos de alta qualidade em celulares, tablets, notebooks e
+              desktops.
+            </p>
+            <a class="botao" href="./contato.html">Pedir Orçamento</a>
+          </div>
+          <picture class="introducao-imagem">
+            <img src="./img/intro1.jpg" alt="Celular desmontado." />
+            <img
+              src="./img/intro2.jpg"
+              alt="Celular desmontado sendo consertado por um técnico"
+            />
+          </picture>
+        </div>
+      </main>
+    </div>
+
+    <article class="sobre container">
+      <h2 class="font-1-xxl"><span class="cor-p2">Sobre</span> nós.</h2>
+
+      <div class="sobre-conteudo">
+        <div>
+          <img
+            src="./img/loja.jpg"
+            alt="Foto da fachada da Ribeiro Tecnologia."
+          />
+        </div>
+        <div class="font-2-s cor-8">
+          <p>
+            A Ribeiro Tecnologia é uma loja de acessórios e assistência técnica
+            especializada em reparos de smartphones, notebooks, tablets e
             desktops.
           </p>
-          <a class="botao" href="./contato.html">Pedir Orçamento</a>
-        </div>
-        <div>
-          <img src="./img/intro1.jpg" alt="Celular desmontado." />
+          <p>
+            Atuando desde 2010 em São José do Rio Preto, a Ribeiro Tecnologia
+            tem como principal objetivo prestar um excelente atendimento a todos
+            seus clientes, fornecendo mão de obra especializada, honestidade,
+            qualidade e agilidade.
+          </p>
+          <p>
+            Possui técnicos capacitados e com CREA, laboratório equipado, peças
+            de alta performance e atendimento eficiente para resolver o seu
+            problema no menor tempo possível com qualidade e preço justo. Venha
+            conhecer nosso serviço!
+          </p>
+
+          <a class="font-1-m cor-p3" href="sobre.html">Saiba Mais</a>
         </div>
       </div>
-    </main>
+    </article>
   </body>
 </html>
