Seçao reparos feita e inicio da seçao depoimentos

--- a/index.html
+++ b/index.html
@@ -124,6 +124,201 @@
       <h2 class="font-1-xxl cor-11">
         O que podemos <span class="cor-p2">reparar</span> para você?
       </h2>
+
+      <div class="reparos-conteudo">
+        <div class="reparos-item">
+          <img
+            src="./img/fotos/servicos/celular.jpg"
+            alt="Celular desmontado"
+            class="reparos-imagem"
+          />
+          <h3 class="font-1-l cor-11">Celulares</h3>
+
+          <ul class="font-2-s-b cor-8">
+            <li>
+              <img src="./img/icones/servicos/celular-icone.svg" alt="" />
+              Tela
+            </li>
+            <li>
+              <img src="./img/icones/servicos/bateria-icone.svg" alt="" />
+              Bateria
+            </li>
+            <li>
+              <img src="./img/icones/servicos/conector-icone.svg" alt="" />
+              Conector
+            </li>
+            <li>
+              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              Placa
+            </li>
+            <li>
+              <img src="./img/icones/servicos/power-icone.svg" alt="" />
+              Botão Power
+            </li>
+            <li>
+              <img src="./img/icones/servicos/altofalante-icone.svg" alt="" />
+              Alto-falante
+            </li>
+            <li>
+              <img src="./img/icones/servicos/camera-icone.svg" alt="" />
+              Câmera
+            </li>
+          </ul>
+        </div>
+
+        <div class="reparos-item">
+          <img
+            src="./img/fotos/servicos/tablet.jpg"
+            alt="Tablet desmontado"
+            class="reparos-imagem"
+          />
+          <h3 class="font-1-l cor-11">Tablets</h3>
+
+          <ul class="font-2-s-b cor-8">
+            <li>
+              <img src="./img/icones/servicos/celular-icone.svg" alt="" />
+              Tela
+            </li>
+            <li>
+              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              Placa
+            </li>
+            <li>
+              <img src="./img/icones/servicos/altofalante-icone.svg" alt="" />
+              Alto-falante
+            </li>
+            <li>
+              <img src="./img/icones/servicos/bateria-icone.svg" alt="" />
+              Bateria
+            </li>
+
+            <li>
+              <img src="./img/icones/servicos/power-icone.svg" alt="" />
+              Botão Power
+            </li>
+
+            <li>
+              <img src="./img/icones/servicos/conector-icone.svg" alt="" />
+              Conector
+            </li>
+
+            <li>
+              <img src="./img/icones/servicos/camera-icone.svg" alt="" />
+              Câmera
+            </li>
+          </ul>
+        </div>
+
+        <div class="reparos-item">
+          <img
+            src="./img/fotos/servicos/notebook.jpg"
+            alt="Notebook desmontado"
+            class="reparos-imagem"
+          />
+          <h3 class="font-1-l cor-11">Notebooks</h3>
+
+          <ul class="font-2-s-b cor-8">
+            <li>
+              <img src="./img/icones/servicos/notebook-icone.svg" alt="" />
+              Tela
+            </li>
+            <li>
+              <img src="./img/icones/servicos/carcaca-icone.svg" alt="" />
+              Carcaça
+            </li>
+            <li>
+              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              Placa
+            </li>
+            <li>
+              <img src="./img/icones/servicos/conector-icone.svg" alt="" />
+              Conector
+            </li>
+            <li>
+              <img src="./img/icones/servicos/altofalante-icone.svg" alt="" />
+              Alto-falante
+            </li>
+            <li>
+              <img src="./img/icones/servicos/formatacao-icone.svg" alt="" />
+              Formatação
+            </li>
+            <li>
+              <img src="./img/icones/servicos/higienizacao-icone.svg" alt="" />
+              Higienização
+            </li>
+          </ul>
+        </div>
+
+        <div class="reparos-item">
+          <img
+            src="./img/fotos/servicos/computador.jpg"
+            alt="Computador desmontado"
+            class="reparos-imagem"
+          />
+          <h3 class="font-1-l cor-11">Desktops</h3>
+
+          <ul class="font-2-s-b cor-8">
+            <li>
+              <img src="./img/icones/servicos/upgrade-icone.svg" alt="" />
+              Upgrade
+            </li>
+            <li>
+              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              Placa
+            </li>
+            <li>
+              <img src="./img/icones/servicos/formatacao-icone.svg" alt="" />
+              Formatação
+            </li>
+            <li>
+              <img src="./img/icones/servicos/higienizacao-icone.svg" alt="" />
+              Higienização
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="reparos-cta">
+        <p class="font-2-l-b cor-9">
+          Para maiores informações, faça um
+          <span class="cor-p3">orçamento sem compromisso.</span>
+        </p>
+
+        <a class="botao-secundario" href="./servicos.html">Pedir Orçamento</a>
+      </div>
     </article>
+
+    <section class="depoimentos-bg">
+      <div class="depoimentos container">
+        <header>
+          <h2 class="font-1-xl cor-0">Depoimentos.</h2>
+          <p class="font-2-l cor-3">O que nossos clientes dizem sobre nós.</p>
+        </header>
+
+        <ul>
+          <li class="depoimento-conteudo">
+            <p class="font-2-xs cor-9">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse sagittis arcu quis nisi luctus,
+            </p>
+            <div>
+              <img src="./img/avatares/avatar-1" alt="" />
+              <span>Lucas Ribeiro</span>
+            </div>
+          </li>
+
+          <li class="depoimento-conteudo">
+            <p class="font-2-xs cor-9">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse sagittis arcu quis nisi luctus,
+            </p>
+            <div>
+              <img src="./img/avatares/avatar1.jpg" alt="" />
+              <span>Lucas Ribeiro</span>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
