Seçao reparos finalizada e seçao depoimentos inicializada

--- a/index.html
+++ b/index.html
@@ -297,25 +297,57 @@
 
         <ul>
           <li class="depoimento-conteudo">
-            <p class="font-2-xs cor-9">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              Suspendisse sagittis arcu quis nisi luctus,
-            </p>
-            <div>
-              <img src="./img/avatares/avatar-1" alt="" />
-              <span>Lucas Ribeiro</span>
-            </div>
+            <blockquote>
+              <p class="font-2-xs cor-9">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse sagittis arcu quis nisi luctus,
+              </p>
+              <div class="autor">
+                <img
+                  src="./img/avatares/avatar1.jpg"
+                  width="32"
+                  height="32"
+                  alt=""
+                />
+                <span class="font-1-xs cor-7">Lucas Ribeiro</span>
+              </div>
+            </blockquote>
           </li>
 
           <li class="depoimento-conteudo">
-            <p class="font-2-xs cor-9">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              Suspendisse sagittis arcu quis nisi luctus,
-            </p>
-            <div>
-              <img src="./img/avatares/avatar1.jpg" alt="" />
-              <span>Lucas Ribeiro</span>
-            </div>
+            <blockquote>
+              <p class="font-2-xs cor-9">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse sagittis arcu quis nisi luctus,
+              </p>
+              <div class="autor">
+                <img
+                  src="./img/avatares/avatar1.jpg"
+                  width="32"
+                  height="32"
+                  alt=""
+                />
+                <span class="font-1-xs cor-7">Lucas Ribeiro</span>
+              </div>
+            </blockquote>
+          </li>
+
+          <li class="depoimento-conteudo">
+            <blockquote>
+              <p class="font-2-xs cor-9">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse sagittis arcu quis nisi luctus,
+              </p>
+              <div class="autor">
+                <img
+                  src="./img/avatares/avatar1.jpg"
+                  width="32"
+                  height="32"
+                  alt=""
+                />
+                <span class="font-1-xs cor-7">Lucas Ribeiro</span>
+              </div>
+            </blockquote>
           </li>
         </ul>
       </div>
