--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       content="Assistência técnica em São José do Rio Preto especializada em reparos de qualidade em celulares, tablets, notebooks e computadores."
     />
 
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
     <link rel="preload" href="./css/style.css" as="style" />
     <link rel="stylesheet" href="./css/style.css" />
 
@@ -295,7 +296,7 @@
           <p class="font-2-l cor-3">O que nossos clientes dizem sobre nós.</p>
         </header>
 
-        <ul>
+        <ul class="container">
           <li class="depoimento-conteudo">
             <blockquote>
               <p class="font-2-xs cor-9">
@@ -350,7 +351,75 @@
             </blockquote>
           </li>
         </ul>
+
+        <div class="navegacao">
+          <span class="bullet active"></span>
+          <span class="bullet"></span>
+          <span class="bullet"></span>
+        </div>
       </div>
     </section>
+
+    <footer class="footer-bg">
+      <div class="footer container">
+        <img
+          src="./img/ribeirotecnologia.svg"
+          width="155"
+          height="60"
+          alt="Ribeiro Tecnologia"
+        />
+        <div class="footer-contato">
+          <h3 class="font-1-s-bot cor-0">Contato</h3>
+          <ul class="font-2-s cor-5">
+            <li><a href="tel:+5517997879022">17 99787-9022</a></li>
+            <li><a href="tel:+551732364592">17 3236-4592</a></li>
+            <li>
+              <a href="mailto:ribeirotecnologia@hotmail.com"
+                >ribeirotecnologia@hotmail.com</a
+              >
+            </li>
+            <li>Rua da Fé, 517 - Jardim Urano</li>
+            <li>São José do Rio Preto - SP</li>
+          </ul>
+          <div class="footer-redes">
+            <a href="./">
+              <img
+                src="./img/redes/instagram.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
+              />
+            </a>
+            <a href="./">
+              <img
+                src="./img/redes/facebook.svg"
+                width="32"
+                height="32"
+                alt="Facebook"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="footer-informacoes">
+          <h3 class="font-1-s-bot cor-0">Informações</h3>
+          <nav>
+            <ul class="font-2-s cor-0">
+              <li><a href="./sobre.html">Sobre</a></li>
+              <li><a href="./servicos.html">Serviços</a></li>
+              <li><a href="./contato.html">Contato</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer-copy font-2-s cor-6">
+          <p>Ribeiro Tecnologia © Todos os direitos reservados.</p>
+          <p>
+            Desenvolvido por
+            <a class="font-2-s-b" href="https://github.com/luc-ribeiro"
+              >Lucas Ribeiro</a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
