HTML e CSS finalizados

--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
               Reparos de alta qualidade em celulares, tablets, notebooks e
               desktops.
             </p>
-            <a class="botao" href="./contato.html">Pedir Orçamento</a>
+            <a
+              class="botao"
+              target="_blank"
+              href="https://api.whatsapp.com/send?phone=5517997879022&text=Ol%C3%A1!%20Gostaria%20de%20um%20or%C3%A7amento!"
+              >Pedir Orçamento</a
+            >
           </div>
           <div class="introducao-imagem">
             <picture>
@@ -130,6 +135,8 @@
         <div class="reparos-item">
           <img
             src="./img/fotos/servicos/celular.jpg"
+            width="520"
+            height="440"
             alt="Celular desmontado"
             class="reparos-imagem"
           />
@@ -137,31 +144,66 @@
 
           <ul class="font-2-s-b cor-8">
             <li>
-              <img src="./img/icones/servicos/celular-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/celular-icone.svg"
+                alt=""
+              />
               Tela
             </li>
             <li>
-              <img src="./img/icones/servicos/bateria-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/bateria-icone.svg"
+                alt=""
+              />
               Bateria
             </li>
             <li>
-              <img src="./img/icones/servicos/conector-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/conector-icone.svg"
+                alt=""
+              />
               Conector
             </li>
             <li>
-              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/placa-icone.svg"
+                alt=""
+              />
               Placa
             </li>
             <li>
-              <img src="./img/icones/servicos/power-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/power-icone.svg"
+                alt=""
+              />
               Botão Power
             </li>
             <li>
-              <img src="./img/icones/servicos/altofalante-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/altofalante-icone.svg"
+                alt=""
+              />
               Alto-falante
             </li>
             <li>
-              <img src="./img/icones/servicos/camera-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/camera-icone.svg"
+                alt=""
+              />
               Câmera
             </li>
           </ul>
@@ -170,6 +212,8 @@
         <div class="reparos-item">
           <img
             src="./img/fotos/servicos/tablet.jpg"
+            width="520"
+            height="440"
             alt="Tablet desmontado"
             class="reparos-imagem"
           />
@@ -177,34 +221,69 @@
 
           <ul class="font-2-s-b cor-8">
             <li>
-              <img src="./img/icones/servicos/celular-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/celular-icone.svg"
+                alt=""
+              />
               Tela
             </li>
             <li>
-              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/placa-icone.svg"
+                alt=""
+              />
               Placa
             </li>
             <li>
-              <img src="./img/icones/servicos/altofalante-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/altofalante-icone.svg"
+                alt=""
+              />
               Alto-falante
             </li>
             <li>
-              <img src="./img/icones/servicos/bateria-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/bateria-icone.svg"
+                alt=""
+              />
               Bateria
             </li>
 
             <li>
-              <img src="./img/icones/servicos/power-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/power-icone.svg"
+                alt=""
+              />
               Botão Power
             </li>
 
             <li>
-              <img src="./img/icones/servicos/conector-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/conector-icone.svg"
+                alt=""
+              />
               Conector
             </li>
 
             <li>
-              <img src="./img/icones/servicos/camera-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/camera-icone.svg"
+                alt=""
+              />
               Câmera
             </li>
           </ul>
@@ -213,6 +292,8 @@
         <div class="reparos-item">
           <img
             src="./img/fotos/servicos/notebook.jpg"
+            width="520"
+            height="440"
             alt="Notebook desmontado"
             class="reparos-imagem"
           />
@@ -220,31 +301,66 @@
 
           <ul class="font-2-s-b cor-8">
             <li>
-              <img src="./img/icones/servicos/notebook-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/notebook-icone.svg"
+                alt=""
+              />
               Tela
             </li>
             <li>
-              <img src="./img/icones/servicos/carcaca-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/carcaca-icone.svg"
+                alt=""
+              />
               Carcaça
             </li>
             <li>
-              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/placa-icone.svg"
+                alt=""
+              />
               Placa
             </li>
             <li>
-              <img src="./img/icones/servicos/conector-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/conector-icone.svg"
+                alt=""
+              />
               Conector
             </li>
             <li>
-              <img src="./img/icones/servicos/altofalante-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/altofalante-icone.svg"
+                alt=""
+              />
               Alto-falante
             </li>
             <li>
-              <img src="./img/icones/servicos/formatacao-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/formatacao-icone.svg"
+                alt=""
+              />
               Formatação
             </li>
             <li>
-              <img src="./img/icones/servicos/higienizacao-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/higienizacao-icone.svg"
+                alt=""
+              />
               Higienização
             </li>
           </ul>
@@ -252,6 +368,8 @@
 
         <div class="reparos-item">
           <img
+            width="520"
+            height="440"
             src="./img/fotos/servicos/computador.jpg"
             alt="Computador desmontado"
             class="reparos-imagem"
@@ -260,19 +378,39 @@
 
           <ul class="font-2-s-b cor-8">
             <li>
-              <img src="./img/icones/servicos/upgrade-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/upgrade-icone.svg"
+                alt=""
+              />
               Upgrade
             </li>
             <li>
-              <img src="./img/icones/servicos/placa-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/placa-icone.svg"
+                alt=""
+              />
               Placa
             </li>
             <li>
-              <img src="./img/icones/servicos/formatacao-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/formatacao-icone.svg"
+                alt=""
+              />
               Formatação
             </li>
             <li>
-              <img src="./img/icones/servicos/higienizacao-icone.svg" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="./img/icones/servicos/higienizacao-icone.svg"
+                alt=""
+              />
               Higienização
             </li>
           </ul>
@@ -285,7 +423,12 @@
           <span class="cor-p3">orçamento sem compromisso.</span>
         </p>
 
-        <a class="botao-secundario" href="./servicos.html">Pedir Orçamento</a>
+        <a
+          class="botao-secundario"
+          target="_blank"
+          href="https://api.whatsapp.com/send?phone=5517997879022&text=Ol%C3%A1!%20Gostaria%20de%20um%20or%C3%A7amento!"
+          >Pedir Orçamento</a
+        >
       </div>
     </article>
 
@@ -382,7 +525,10 @@
             <li>São José do Rio Preto - SP</li>
           </ul>
           <div class="footer-redes">
-            <a href="./">
+            <a
+              target="_blank"
+              href="https://www.instagram.com/ribeiro.tecnologia/"
+            >
               <img
                 src="./img/redes/instagram.svg"
                 width="32"
@@ -390,7 +536,10 @@
                 alt="Instagram"
               />
             </a>
-            <a href="./">
+            <a
+              target="_blank"
+              href="https://www.facebook.com/ribeirotecnologia"
+            >
               <img
                 src="./img/redes/facebook.svg"
                 width="32"
