--- a/servicos.html
+++ b/servicos.html
@@ -213,7 +213,12 @@
           <span class="cor-p3">orçamento sem compromisso.</span>
         </p>
 
-        <a class="botao-secundario" href="./servicos.html">Pedir Orçamento</a>
+        <a
+          class="botao-secundario"
+          target="_blank"
+          href="https://api.whatsapp.com/send?phone=5517997879022&text=Ol%C3%A1!%20Gostaria%20de%20um%20or%C3%A7amento!"
+          >Pedir Orçamento</a
+        >
       </div>
     </article>
 
@@ -357,7 +362,10 @@
             <li>São José do Rio Preto - SP</li>
           </ul>
           <div class="footer-redes">
-            <a href="./">
+            <a
+              target="_blank"
+              href="https://www.instagram.com/ribeiro.tecnologia/"
+            >
               <img
                 src="./img/redes/instagram.svg"
                 width="32"
@@ -365,7 +373,10 @@
                 alt="Instagram"
               />
             </a>
-            <a href="./">
+            <a
+              target="_blank"
+              href="https://www.facebook.com/ribeirotecnologia"
+            >
               <img
                 src="./img/redes/facebook.svg"
                 width="32"
