--- a/sobre.html
+++ b/sobre.html
@@ -199,7 +199,10 @@
             <li>São José do Rio Preto - SP</li>
           </ul>
           <div class="footer-redes">
-            <a href="./">
+            <a
+              target="_blank"
+              href="https://www.instagram.com/ribeiro.tecnologia/"
+            >
               <img
                 src="./img/redes/instagram.svg"
                 width="32"
@@ -207,7 +210,10 @@
                 alt="Instagram"
               />
             </a>
-            <a href="./">
+            <a
+              target="_blank"
+              href="https://www.facebook.com/ribeirotecnologia"
+            >
               <img
                 src="./img/redes/facebook.svg"
                 width="32"
