Endereco de email consertado

--- a/contato.html
+++ b/contato.html
@@ -97,8 +97,8 @@
             >
           </div>
           <div class="contato-email">
-            <a href="mailto:ribeirotecnologia@hotmail.com"
-              >ribeirotecnologia@hotmail.com</a
+            <a href="mailto:ribeiro.tecnologia@hotmail.com"
+              >ribeiro.tecnologia@hotmail.com</a
             >
           </div>
         </address>
@@ -158,8 +158,8 @@
             <li><a href="tel:+5517997879022">17 99787-9022</a></li>
             <li><a href="tel:+551732364592">17 3236-4592</a></li>
             <li>
-              <a href="mailto:ribeirotecnologia@hotmail.com"
-                >ribeirotecnologia@hotmail.com</a
+              <a href="mailto:ribeiro.tecnologia@hotmail.com"
+                >ribeiro.tecnologia@hotmail.com</a
               >
             </li>
             <li>Rua da Fé, 517 - Jardim Urano</li>
