Informaçoes de serviço atualizadas e ajuste de tipografia

--- a/servicos.html
+++ b/servicos.html
@@ -362,7 +362,7 @@
     <section class="diferenciais-bg">
       <div class="diferenciais container">
         <header class="container">
-          <h2 class="font-1-xl cor-0">Por que nós?</h2>
+          <h2 class="font-1-l cor-0">Por que nós?</h2>
           <p class="font-2-l cor-4">Conheça nossos diferenciais.</p>
         </header>
 
@@ -442,8 +442,7 @@
           </dt>
           <dd id="pergunta1" class="font-2-xs cor-9 ativa">
             Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
-            pagamentos à vista também aceitarmos PIX e Boleto através do
-            PagSeguro.
+            pagamentos à vista também aceitamos PIX.
           </dd>
         </div>
         <div>
